...
}

- (instancetype)initWithProfileId:(NSString *)profileId {
    self = [super init];
    if (self) {
        if ([profileId isEqualToString:[Identification userId]]) {
            self.navigationItem.rightBarButtonItem = [[UIBarButtonItem alloc] initWithTitle:@"Edit" style:UIBarButtonItemStylePlain target:self action:@selector(editProfile)];
        }
        self.navigationItem.backBarButtonItem = [[UIBarButtonItem alloc] initWithTitle:@"" style:UIBarButtonItemStylePlain target:nil action:nil];
        self.title = @"Profile";
        self.profileId = profileId;
        self.myUserId = [Identification userId];
    }

    return self;
}
...
    [label mas_makeConstraints:^(MASConstraintMaker *make) {
        make.centerX.equalTo(sectionView);
        make.centerY.equalTo(sectionView).offset(6);
    }];
    
//    PlayerSectionView *sectionView = [[PlayerSectionView alloc] initWithFrame:CGRectMake(0, 0, tableView.frame.size.width, 18)];
//    [sectionView setSectionTitle:[NSString stringWithFormat:@"Battles (%li)", (long)self.battles.count]];
//    [sectionView setSectionLastText:@"Winnings"];
//
    return sectionView;
}

- (CGFloat)tableView:(UITableView *)tableView heightForRowAtIndexPath:(NSIndexPath *)indexPath {
...
