...
    self.matchesController = [[MatchesTeamViewController alloc] initWithViewModel:self.viewModel];
    self.playerController = [[PlayersTeamViewController alloc] initWithViewModel:self.viewModel];
    self.tableController = [[TableTeamViewController alloc] initWithViewModel:self.viewModel];

    [self addSubPageControllers:@[
        @{
            @"title" : [SimpleLocale USAlternative:@"Games" forString:@"Matches"],
            @"controller" : self.matchesController,
        },
        @{
            @"title": @"Squad",
            @"controller": self.playerController
        },
...
