...
                @{
                        @"title": @"Show Onboarding",
                        @"data": @""
                }
        ];

        self.navigationItem.rightBarButtonItem = [[UIBarButtonItem alloc] initWithTitle:@"Close" style:UIBarButtonItemStylePlain target:self action:@selector(closeInfo)];
    }

    return self;
}

- (void)closeInfo {
...
